<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Radiobeacon</string>
    <string name="cell">Cell</string>
    <string name="operator">Operator</string>
    <string name="type">Type</string>
    <string name="dbm">dBm</string>
    <string name="ssid">SSID</string>
    <string name="level">Level</string>
    <string name="turnOnGpsQuestion">GPS is switched off! Would you like to activate GPS now?</string>
    <string name="networkTypeCaption">Network Type</string>
    <string name="cellIdCaption">Cell ID:</string>
    <string name="createdAtCaption">Created At</string>
    <string name="baseIdCaption">Base ID</string>
    <string name="operatorCaption">Operator</string>
    <string name="mccCaption">MCC</string>
    <string name="mncCaption">MNC</string>
    <string name="strenghtDbmCaption">Strength (dbm)</string>
    <string name="isServingCellCaption">Is serving cell?</string>
    <string name="openbmap_data_source">Data: OpenBmap</string>
    <string name="openbmap_license">CC-by-SA 3.0 / Odbl Licence</string>
    <string name="mapsforge_source">Maps library: Mapsforge Library</string>
    <string name="mapsforge_license">GNU LGPL3 licence</string>
    <string name="credits">Credits</string>
    <string name="map_data_source">Map data: Openstreetmap</string>
    <string name="map_data_license">Odbl Licence</string>
    <string name="other_credits">Some great ideas were taken from OSMTracker, stack overflow discussions and any many, many others</string>
    <string name="bug_report">Please report bugs or improvements in the forums at http://sourceforge.net/projects/myposition/</string>
    <string name="subtitle">OpenBmap Wifi &amp; Cell Logger</string>
    <string name="website">http://www.openbmap.org</string>
    <string name="sessions">Sessions</string>
    <string name="help">Tap menu to start a new session</string>
    <string name="title">Radiobeacon</string>
    <string name="id">#</string>
    <string name="n_a">N/A</string>
    <string name="total_empty">(--)</string>
    <string name="capabilities">Capabilities</string>
    <string name="frequency">Frequency</string>
    <string name="date">Date</string>
    <string name="please_select_map">Please select a map file first!</string>
    <string name="error_dowload_error">Error: Download failed. Maybe connection was interrupted?</string>
    <string name="warning_outdated_client">Your client version is too old. Please update!</string>
    <string name="warning_client_version_not_checked">Couldn\'t verify client version. Either you\'re offline, server is down or this client is too old.</string>
    <string name="warning_session_closed">Can\'t resume! Session has already been uploaded.</string>
    <string name="warning_already_uploaded">Won\'t upload session. Has already been uploaded!</string>
    <string name="question_delete_session">Do you want to delete session?</string>
    <string name="yes">Yes</string>
    <string name="question_delete_all_sessions">Do you really want to delete all sessions?</string>
    <string name="session_already_uploaded">Session already uploaded</string>
    <string name="confirmation">Confirmation</string>
    <string name="user_or_password_missing">User name or password is missing</string>
    <string name="question_enter_user">Enter user name and password now?</string>
    <string name="deleted">Deleted!</string>
    <string name="warning_sd_not_writable">Can\'t write to SD card. Perhaps mounted on desktop pc?</string>
    <string name="error_save_file_failed">Error: Couldn\'t save wifi catalog! Check SD card / permissions!</string>
    <string name="error_create_directory_failed">Couldn\'t create data directory</string>
    <string name="tap_hotspot_to_see_details">Tap hotspot to see details</string>
    <string name="tap_measurement_to_see_on_map">Tap measurement to see on map</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="version">Version:</string>
    <string name="warning_delete_all_sessions">Do you really want to delete all sessions?</string>
    <string name="warning">Warning!</string>
    <string name="hint_notification">Tap here to display main screen</string>
    <string name="notification">RadioBeacon is tracking (#{0})</string>
    <string name="notification_caption">Radiobeacon is scanning</string>
    <string name="exporting_wifis">Uploading wifis</string>
    <string name="exporting_cells">Uploading cells</string>
    <string name="exporting_gpx">Exporting GPX to SD card</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="upload_skipped">Upload skipped (If this happened accidently, check your debug settings)</string>
    <string name="preparing_export">Preparing export..</string>
</resources>
