<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_resume_session"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/resume">
    </item>
    <item
        android:id="@+id/menu_stop_session"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/stop">
    </item>
    <item
        android:id="@+id/menu_delete_session"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/menu_upload_session"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/upload">
    </item>
    <item
        android:id="@+id/menu_delete_all_sessions"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/delete_all">
    </item>
     
</menu>