<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/credits_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/credits_openbmap_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openbmap_data_source"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/credits_openbmap_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openbmap_license"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/session_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapsforge_source"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/session_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapsforge_license"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/credits_map_data_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_data_source"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/credits_map_data_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_data_license"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/credits_other_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_credits"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/credits_bug_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_report"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/credits_client_version_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/credits_client_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>