<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/celldetails_networktype"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/networkTypeCaption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/credits_credits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/createdAtCaption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/celldetails_cellid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cellIdCaption"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/credits_other_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseIdCaption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/celldetails_baseid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/celldetails_operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operatorCaption" />

            <TextView
                android:id="@+id/session_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mccCaption" />

            <TextView
                android:id="@+id/celldetails_mcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/credits_openbmap_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mncCaption" />

            <TextView
                android:id="@+id/celldetails_mnc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/session_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strenghtDbmCaption" />

            <TextView
                android:id="@+id/celldetails_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>

          <TableRow>

              <CheckedTextView
                  android:id="@+id/celldetails_chkIsServing"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checkMark="?android:attr/textCheckMark" 
           		  android:text="@string/isServingCellCaption"/>
          
        </TableRow>
        
    </TableLayout>

    <fragment
        android:id="@+id/cellDetailsFragment"
        android:name="org.openbmap.activity.CellDetailsFragment"
        android:layout_width="fill_parent"
        android:layout_height="78dp" />

</LinearLayout>