<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutOuter"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stats_id_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="322dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="0.75"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/session_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/session_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/wifilistfragment_statusicon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/sessions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sessions" />

        <fragment
            android:id="@+id/sessionListFragment"
            android:name="org.openbmap.activity.SessionListFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/session_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>